<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">appferal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_register">登录注册</string>
    <string name="register">极速注册</string>
    <string name="lgn">登录</string>
    <string name="rgs">注册</string>
    <string name="login">完善资料</string>
    <string name="login_edit_name">  手机号/邮箱</string>
    <string name="login_edit_password">  密码</string>
    <string name="login_btn">立即登录</string>
    <string name="login_text">忘记密码？</string>
    <string name="setpassword">设置新密码</string>
    <string name="setpassword_edittext">请输入验证码  </string>
    <string name="setpassword_text">重新发送（60）</string>
    <string name="setpassword_password">设置新密码</string>
    <string name="setpassword_btn">确定</string>
    <string name="register_phone">填写手机号</string>
    <string name="register_phone_edittext">请输入手机验证码</string>
    <string name="register_phone_ed">请输入手机号码</string>
    <string name="register_phone_edit">获取验证码</string>
    <string name="register_phone_next">下一步</string>
    <string name="register_phone_text">我已阅读并同意</string>
    <string name="register_phone_texta">蹭课服务条款</string>
    <string name="register_info">完善资料</string>
    <string name="register_info_name">请输入昵称</string>
    <string name="register_info_password">请输入密码</string>
    <string name="register_info_text">获取验证码</string>
    <string name="register_info_btn">开启蹭课之旅</string>
    <string name="details">机构详情</string>
    <string name="details_name">汉昌 UI 培训机构</string>
    <string name="details_phone">023-88888888</string>
    <string name="details_adds">重庆渝中区太平洋 3 楼</string>
    <string name="details_yue">预约</string>
    <string name="details_numb">15</string>
    <string name="details_syn">   \t作为一家专业的建筑外装系统集成商，上海汉昌实业发展有限公司，多年来一直致力于建筑材料高新领域的开拓。</string>
    <string name="gangqin">钢琴</string>
    <string name="yinyuelei">音乐类</string>
    <string name="about_us">\t\t蹭课课堂网致力于打造集实用性，互动性，趣味性为一体的在想英语学习平台，网站名称“蹭课课堂网”寓意带领广大的英语学习爱好者在快乐中轻松学习英语。网站于2008年初上线，是国内最受欢迎的开放式英语学习网站，已经赢得越来越多英语爱好者的信任与支持，已成为国内知名的英语学习网站之一。</string>
    <string name="post_details_text">冻死了卡夫卡圣诞节疯狂拉升的解放啦深刻的积分接口是东方航空事叫对方开始，是电话妇科是几号房。但是否可哈萨克的经费和。是独立房间了开始问题儿童分工。</string>
    <string name="my_sign_record">我的报名记录</string>
    <string name="quanbu">全部</string>
    <string name="yuyue">预约</string>
    <string name="yishouli">已受理</string>

</resources>