<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/my_sign_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="13dp"
        android:text="@string/my_sign_record"
        android:textSize="16sp" />
    <!-- 灰线 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/grive_line" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/my_sign_record_quanbu_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/quanbu"
            android:textColor="@color/text4"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/my_sign_record_yuyue_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/yuyue"
            android:textColor="@color/text4"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/my_sign_record_yishouli_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/yishouli"
            android:textColor="@color/text4"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/grive_line" >
    </View>

    <ListView
        android:id="@+id/my_sign_record_list_lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>